@@ -2,6 +2,7 @@ ver 0.20.13 (not yet released)
 * database
   - simple: don't purge mount points on update/rescan
   - upnp: work around libupnp 1.6.24 API breakage
+* queue: fix spuriously misplaced prioritized songs
 
 ver 0.20.12 (2017/11/25)
 * database
